# JobAssistant

./: .gitignore  AgentSearch.py  README.md  Website_summarization.ipynb  ollamaDeepSeek.ipynb
.ipynb_checkpoints/: CoverLetter_generator-checkpoint.ipynb  Website_summarization-checkpoint.ipynb  google_search_summarization-checkpoint.ipynb  jobDesc-checkpoint.txt
ConvertResume/: Untitled.ipynb  main2.py  pdf_parser-Copy1.py  pdf_parser.py
CoverLetter/: CoverLetter_generator.ipynb  jobDesc.txt
CoverLetter_agentic/: app.py  job_desc.txt
Resume_chatbot/: Chat_Resume.ipynb  Read_github.ipynb  app.py
SpeakAI_interview/: app.py
Website/: profile.py.new
company Search/: W1_D5_making_bussiness_brochure_via_ChatGPT.ipynb  Website_summarization_for_jobDesc-Copy1.ipynb  Website_summarization_for_jobDesc.ipynb  google_search_summarization.ipynb  jobDesc.txt
github/: app.py  app.py.backup  repo_summarizer.py
jobExtraction/: main.ipynb  my_settings.yaml
linkedin_proposal/: README.md  output_profile.md  pyproject.toml  resume_json.json
linkedin_proposal/.ipynb_checkpoints/: output_profile-checkpoint.md
linkedin_proposal/src/linkedin_proposal/: crew.py  main.py
linkedin_proposal/src/linkedin_proposal/.ipynb_checkpoints/: PDF_parser-checkpoint.py
linkedin_proposal/src/linkedin_proposal/config/.ipynb_checkpoints/: agents-checkpoint.yaml  tasks-checkpoint.yaml
linkedin_proposal/src/linkedin_proposal/config/old_files/: agents.yaml  tasks.yaml
resumeBuilder/: main.ipynb  requirement_extractor.py
resumeBuilder2/: Untitled.ipynb  app-Copy1.py  app-Copy2.py  (+4 more)
(+112 files in other folders)
