[project]
name = "linkedin_proposal"
version = "0.1.0"
description = "Linkedin_proposal using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
    "pymupdf>=1.26.3",
]

[project.scripts]
linkedin_proposal = "linkedin_proposal.main:run"
run_crew = "linkedin_proposal.main:run"
train = "linkedin_proposal.main:train"
replay = "linkedin_proposal.main:replay"
test = "linkedin_proposal.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
